// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fragments "CTA_FRAGMENT" matches snapshot: CTA_FRAGMENT 1`] = `
"
cta {
  id
  label
  linkType
  externalLink
  internalLink {
    id
    slug
  }
}
"
`;

exports[`Fragments "HERO_FRAGMENT" matches snapshot: HERO_FRAGMENT 1`] = `
"
...on HeroBlock {
  __typename
  id
  hero {
    id
    icon {
      
id
alt
url
width
height
base64

    }
    heading
    headingTag
    coloredSubhead
    subhead
    doodles
    homepage
    
cta {
  id
  label
  linkType
  externalLink
  internalLink {
    id
    slug
  }
}

  }
}
"
`;

exports[`Fragments "IMAGE_BLOCK_FRAGMENT" matches snapshot: IMAGE_BLOCK_FRAGMENT 1`] = `
"
...on ImageBlock {
  __typename
  image {
    
id
alt
url
width
height
base64

  }
}
"
`;

exports[`Fragments "IMAGE_FRAGMENT" matches snapshot: IMAGE_FRAGMENT 1`] = `
"
id
alt
url
width
height
base64
"
`;

exports[`Fragments "INTERNAL_LINK_FRAGMENT" matches snapshot: INTERNAL_LINK_FRAGMENT 1`] = `
"
id
title
slug
"
`;

exports[`Fragments "SINGLE_USE_FRAGMENT" matches snapshot: SINGLE_USE_FRAGMENT 1`] = `
"
...on SingleUseBlock {
  __typename
  id
  singleUse
}
"
`;

exports[`Fragments "SOCIALS_FRAGMENT" matches snapshot: SOCIALS_FRAGMENT 1`] = `
"
...on SocialsBlock {
  __typename
  id
  socials {
    icon {
      
id
alt
url
width
height
base64

    }
    label
    socialLink
  }
}
"
`;

exports[`Fragments "TEXT_BLOCK_FRAGMENT" matches snapshot: TEXT_BLOCK_FRAGMENT 1`] = `
"
...on TextBlock {
  __typename
  id
  heading
  text
}
"
`;
